# exploring_pretrained_models

./: README.md  file_mask.ipynb  main.py  ner.ipynb  pyproject.toml  question_answering.ipynb  text_summarizer.ipynb  text_translation.ipynb  zero_shot.ipynb
