[project]
name = "exploring-pretrained-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arxiv>=2.2.0",
    "langchain>=1.0.2",
    "langchain-community>=0.4.1",
    "pymupdf>=1.26.5",
    "sentencepiece>=0.2.1",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
    "transformers>=4.57.1",
]
